cmake_minimum_required(VERSION 3.25)
project(dev_parcial_2_labs)

set(CMAKE_CXX_STANDARD 14)

add_executable(dev_parcial_2_labs main.cpp Cartel.h Fecha.h Error.h Cadena.h FechaError.h Menu.h MenuError.h MenuPrincipal.h Instrumento.h Archivo.h InstrumentoArchivo.h InstrumentoServicio.h ArchivoError.h MenuInstrumentos.h Servicio.h ServicioError.h Entidad.h Musico.h MusicoArchivo.h MusicoServicio.h Pais.h PaisArchivo.h PaisServicio.h Genero.h GeneroArchivo.h GeneroServicio.h MenuPaises.h MenuGeneros.h MenuMusicos.h reportes.h MenuConfiguracion.h Configuracion.h)
